<resources>
    <string name="app_name">Digital Dent Sail</string>
    <string name="share_image">Share Image</string>
    <string name="choose_color_confirm">Choose</string>
    <string name="choose_color">Choose a Color</string>
    <string name="choose_color_cancel">Cancel</string>
    <string name="settings_stripe_count">Stripe Count</string>
    <string name="settings_big_stripe_thickness">Big Stripe Thickness</string>
    <string name="settings_small_stripe_thickness">Small Stripe Thickness</string>
    <string name="settings_vertical_stripes">Vertical Stripes</string>
    <string name="settings_stripe_color">Stripe Color</string>
    <string name="settings_background_color">Background Color</string>
    <string name="settings_reset">Reset</string>
    <string name="version">v%1$s (%2$d)</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="saved_to_gallery">Saved image to gallery</string>
    <string name="save_to_gallery_failed">Failed to save image to gallery</string>
</resources>
