<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/settings_stripe_count" />

        <TextView
            android:id="@+id/stripeCountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"/>

        <SeekBar
            android:id="@+id/stripeCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="200" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextPrimary"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_weight="1"
            android:text="@string/settings_big_stripe_thickness" />

        <TextView
            android:id="@+id/stripeThicknessBigText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"/>

        <SeekBar
            android:id="@+id/stripeThicknessBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextPrimary"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_weight="1"
            android:text="@string/settings_small_stripe_thickness" />

        <TextView
            android:id="@+id/stripeThicknessSmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"/>

        <SeekBar
            android:id="@+id/stripeThicknessSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100" />

        <Switch
            android:id="@+id/verticalStripes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:layout_weight="1"
            android:text="@string/settings_vertical_stripes" />

        <Button
            android:id="@+id/colorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/settings_stripe_color" />
    </LinearLayout>

</ScrollView>